fix/security-improvements Handle exceptions
