# src/main/resources/openapi/expense-category-paths.yaml
@@ -19,6 +19,10 @@ operations:
                 $ref: 'expense-category-schema.yaml#/components/schemas/ExpenseCategory'
         400:
           $ref: 'common.yaml#/errors/invalid-input'
+        401:
+          $ref: 'common.yaml#/errors/unauthorized'
+        403:
+          $ref: 'common.yaml#/errors/forbidden'
         500:
           $ref: 'common.yaml#/errors/internal-error'
     get:
@@ -56,6 +60,10 @@ operations:
                 $ref: 'expense-category-schema.yaml#/components/schemas/ExpenseCategory'
         400:
           $ref: 'common.yaml#/errors/invalid-input'
+        401:
+          $ref: 'common.yaml#/errors/unauthorized'
+        403:
+          $ref: 'common.yaml#/errors/forbidden'
         404:
           $ref: 'common.yaml#/errors/not-found'
         500:
@@ -77,6 +85,10 @@ operations:
           description: Expense category deleted successfully
         400:
           $ref: 'common.yaml#/errors/invalid-input'
+        401:
+          $ref: 'common.yaml#/errors/unauthorized'
+        403:
+          $ref: 'common.yaml#/errors/forbidden'
         500:
           $ref: 'common.yaml#/errors/internal-error'
     put:
@@ -105,6 +117,10 @@ operations:
                 $ref: 'expense-category-schema.yaml#/components/schemas/ExpenseCategory'
         400:
           $ref: 'common.yaml#/errors/invalid-input'
+        401:
+          $ref: 'common.yaml#/errors/unauthorized'
+        403:
+          $ref: 'common.yaml#/errors/forbidden'
         404:
           $ref: 'common.yaml#/errors/not-found'
         500:
